--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.26.1",
     "miragejs": "^0.1.43",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
