--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "miragejs": "^0.1.43",
+    "react-modal": "^3.14.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
@@ -16,6 +17,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.24",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
